# officecli-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-docker.yml  ci.yml  publish.yml
docs/: deployment-self-sync.md
docs/superpowers/plans/: 2026-07-16-officecli-mcp-implementation.md  2026-07-18-merged-officecli-file-tool.md  2026-07-18-stage-asset.md  2026-07-20-unified-native-tool.md
docs/superpowers/specs/: 2026-07-15-officecli-mcp-design.md  2026-07-18-merged-officecli-file-tool-design.md  2026-07-18-stage-asset-design.md  2026-07-20-unified-native-tool-design.md
examples/: openwebui_officecli_file.py  openwebui_officecli_upload.py
src/officecli_mcp/: __init__.py  __main__.py  binary.py  config.py  files.py  manifest.py  runner.py  server.py  shim.py  shim_sync.py  shim_template.py  tools.py
tests/: conftest.py  test_binary.py  test_config.py  test_e2e_real.py  test_files.py  test_manifest.py  test_officecli_file.py  test_runner.py  test_server.py  test_shim.py  test_shim_actions.py  test_shim_helpers.py  test_shim_sync.py  test_tools.py  test_tools_http.py  test_upload_shim.py
