[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "officecli-mcp"
version = "0.2.0"
description = "MCP server wrapping OfficeCLI for OpenWebUI: handle-based HTTP file layer + streamable-HTTP/stdio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "xyonium" }]
dependencies = [
    "mcp[cli]>=1.27,<2",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio>=4",
    "trio>=0.25",
    "ruff>=0.6",
    "build>=1.2",
    # The officecli_file OpenWebUI tool (examples/) uses requests; needed to import it in tests.
    "requests>=2.31",
]

[project.scripts]
officecli-mcp = "officecli_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# The officecli_file tool (examples/) is pasted into OpenWebUI and uses broad except on purpose.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]
